--- a/src/index.css
+++ b/src/index.css
@@ -5,21 +5,21 @@
 .btn {
   background: linear-gradient(
     92.23deg,
-    #ff56f6 21.43%,
-    #b936ee 50.63%,
+    #66ff66 21.43%,   /* Green color */
+    #3bbd3b 50.63%,   /* Light green color */
     #3bace2 100%,
-    #406aff 117.04%
+    #32ff32 117.04%
   );
-  box-shadow: 0px 4.42184px 107.23px rgba(255, 86, 246, 0.51);
+  box-shadow: 0px 4.42184px 107.23px rgba(102, 255, 102, 0.51);
 }
 
 .btn:hover {
   background: linear-gradient(
     92.23deg,
-    #406aff 21.43%,
+    #32ff32 21.43%,   /* Light green color */
     #3bace2 50.63%,
-    #b936ee 100%,
-    #ff56f6 117.04%
+    #3bbd3b 100%,   /* Green color */
+    #66ff66 117.04%
   );
 }
 
@@ -27,10 +27,10 @@
 .active {
   background: linear-gradient(
     92.23deg,
-    #406aff 21.43%,
+    #32ff32 21.43%,   /* Light green color */
     #3bace2 50.63%,
-    #b936ee 100%,
-    #ff56f6 117.04%
+    #3bbd3b 100%,   /* Green color */
+    #66ff66 117.04%
   );
 }
 
@@ -63,7 +63,7 @@
     @apply text-base;
   }
   .text-gradient {
-    @apply bg-gradient-to-r text-transparent bg-clip-text from-[#42A6E3] to-[#FF56F6] font-bold font-primary hover:from-[#FF56F6] hover:to-[#42A6E3];
+    @apply bg-gradient-to-r text-transparent bg-clip-text from-[#42A6E3] to-[#66FF66] font-bold font-primary hover:from-[#66FF66] hover:to-[#42A6E3];
   }
   .section {
     @apply py-8 lg:py-24 lg:h-screen flex items-center;
